<resources>
    <string name="app_name">Foody</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_recipes_fragment">Favorite Recipes </string>
    <string name="recipes_fragment">Recipes </string>
    <string name="food_joke_fragment">Food Joke </string>
    <string name="topic">Topic</string>
    <string name="image">Image</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="vegan">Vegan</string>
    <string name="_100">100</string>
    <string name="consistency">Consistency</string>
    <string name="original">Original</string>
    <string name="_100_grams">100</string>
    <string name="name">Name</string>
    <string name="imageDescription">image</string>
    <string name="cups">Cups</string>
    <string name="no_favorite_at_the_moment">No Favorite At The Moment</string>
    <string name="todo">TODO</string>
    <string name="delete_all">Delete All</string>
    <string name="title_activity_about">About</string>
    <string name="favorite">Favorite</string>
</resources>