<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="favorite"
            type="com.skylabstechke.foody.models.Result" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart=".5dp"
            android:layout_marginEnd=".5dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"

                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="200dp"
                                android:layout_height="0dp"
                                android:contentDescription="@string/image"
                                loadImageFromUrl="@{favorite.image}"
                                android:scaleType="centerCrop"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:srcCompat="@tools:sample/avatars" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:layout_marginEnd="12dp"
                                android:ellipsize="end"
                                android:fontFamily="@font/courgette"
                                android:text="@{favorite.title}"
                                android:maxLines="2"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@+id/imageView"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="6dp"
                                android:ellipsize="end"
                                android:maxLines="3"
                                parseHtml="@{favorite.summary}"
                                android:textColor="@color/darkGray"
                                app:layout_constraintEnd_toEndOf="@+id/textView3"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView3"
                                app:layout_constraintTop_toBottomOf="@+id/textView3" />

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                android:layout_marginBottom="36dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="@+id/textView2"
                                app:layout_constraintTop_toBottomOf="@+id/textView2"
                                app:layout_constraintVertical_bias="0.13999999"
                                app:srcCompat="@drawable/ic_heart"
                                app:tint="@color/red" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_100"
                                setNumberOfLikes="@{favorite.aggregateLikes}"
                                android:textColor="@color/red"
                                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                                app:layout_constraintStart_toStartOf="@+id/imageView3"
                                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="24dp"
                                android:layout_marginBottom="36dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView3"
                                app:layout_constraintTop_toBottomOf="@+id/textView2"
                                app:layout_constraintVertical_bias="0.17000002"
                                app:srcCompat="@drawable/ic_clock"
                                app:tint="@color/yellow" />

                            <TextView
                                android:id="@+id/textView6"
                                android:text="@string/_100"

                                setNumberOfMinutes="@{favorite.readyInMinutes}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/yellow"
                                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                                app:layout_constraintStart_toStartOf="@+id/imageView4"
                                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="24dp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/imageView4"
                                app:layout_constraintTop_toBottomOf="@+id/textView2"
                                app:layout_constraintVertical_bias="0.41000003"
                                app:srcCompat="@drawable/ic_leaf" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                applyVeganColor="@{favorite.vegan}"
                                android:text="@string/vegan"
                                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                                app:layout_constraintStart_toStartOf="@+id/imageView5"
                                app:layout_constraintTop_toBottomOf="@+id/imageView5" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>